# python-api-frameworks-benchmark

./: .gitignore  BENCHMARK_RESULTS.md  README.md  bench.py  graphene_app.py  graphene_v2_app.py  pyproject.toml  regenerate_graphs.py  requirements-graphene-v2.txt  run_all.sh  run_drf.sh  strawberry_app.py  strawberry_django_app.py
django_project/: drf_api.py  settings.py  settings_graphene_v2.py  settings_graphql.py  urls.py  urls_graphene_v2.py  urls_graphql.py
scripts/: run_all.sh  run_bolt.sh  run_drf.sh  run_fastapi.sh  run_graphene_v2.sh  run_graphene_v3.sh  run_graphql.sh  run_litestar.sh  run_ninja.sh  run_strawberry.sh  run_strawberry_django.sh  setup.sh  setup_graphene_v2.sh
shared/: django_models.py  mutation.py  nplus1.py  versions.py
